--- a/index.css
+++ b/index.css
@@ -11,18 +11,23 @@
 .wrapper{
     min-height: 100vh;
     display: grid;
-    grid-template-columns: 1fr 4fr;
+    grid-template-columns: 1fr 2fr 1fr;
     grid-template-areas: 
-    "navigation header"
-    "navigation main"
-    "navigation main"
-    "navigation main"
+    "navigation header header"
+    "navigation main aside"
+    "navigation main aside"
+    "navigation main aside"
     ;
 }
 
 .header{
     display: grid;
     grid-area: header;
+}
+
+.search {
+    justify-self: center;
+    width: 20rem;
 }
 
 .navigation {
@@ -58,7 +63,25 @@
 .main{
     display: grid;
     grid-area: main;
-    background-color: #E7E5DF;
+    background-color: lightgrey;
+    grid-template-columns: repeat(2, minmax(250px, 1fr));
+    padding: 20px;
+    gap: 20px;
+}
+
+.aside{
+    display: grid;
+    grid-area: aside;
+    grid-template-columns: repeat(1, 300px);
+    justify-content: center;
+    background-color: lightgrey;
+    padding: 20px; 
+    gap: 10px;  
+}
+
+.card{
+    background-color: white;
+    border-radius: 10px;
 }
 
 li {
