--- a/index.css
+++ b/index.css
@@ -11,12 +11,11 @@
 .wrapper{
     min-height: 100vh;
     display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-columns: 300px repeat(3, 1fr);
+    grid-template-rows: 150px 1fr;
     grid-template-areas: 
-    "navigation header header"
-    "navigation main aside"
-    "navigation main aside"
-    "navigation main aside"
+    "navigation header header header"
+    "navigation content content content"
     ;
 }
 
@@ -26,8 +25,20 @@
 }
 
 .search {
-    justify-self: center;
+    display: flex;
+    justify-self: flex-end;
+    align-items: flex-end;
+    margin-right: 10px;
+    margin-bottom: 10px;
+}
+
+#searchbar{
     width: 20rem;
+    border-radius: 1em;
+    border: 0;
+    background-color: lightgray;
+    padding: 10px;
+    font-size: 16px;
 }
 
 .navigation {
@@ -60,28 +71,49 @@
     gap: 10px;
 }
 
-.main{
+.content{
+    display: grid;
+    grid-area: content;
+    background-color: lightgrey;
+    grid-template-columns: 3fr 1fr;
+    grid-template-areas: 
+    "main aside"
+    "main aside"
+    ;
+    gap: 20px;
+    padding: 20px;
+}
+
+.cards{
     display: grid;
     grid-area: main;
-    background-color: lightgrey;
-    grid-template-columns: repeat(2, minmax(250px, 1fr));
-    padding: 20px;
     gap: 20px;
+    grid-template-columns: repeat(2, minmax(250px, 1fr));
+    grid-auto-rows: 200px;
 }
 
 .aside{
-    display: grid;
+    display: flex;
+    flex-direction: column;
     grid-area: aside;
-    grid-template-columns: repeat(1, 300px);
-    justify-content: center;
-    background-color: lightgrey;
-    padding: 20px; 
-    gap: 10px;  
+    gap: 10px;
+}
+
+
+.announcements{
+    grid-area: announcements;
+}
+
+.trending{
+    grid-area: trending;
 }
 
 .card{
     background-color: white;
     border-radius: 10px;
+    padding: 20px;
+    line-height: 1.6;
+    overflow-y: auto;
 }
 
 li {
