--- a/index.css
+++ b/index.css
@@ -1,12 +1,9 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
-@font-face {
-    font-family: GoldLeaf;
-    src: url("./fonts/GoldleafBoldPersonalUseBold.ttf");
-}
 
 .wrapper{
     min-height: 100vh;
@@ -81,7 +78,7 @@
     "main aside"
     ;
     gap: 20px;
-    padding: 20px;
+    padding: 2rem;
 }
 
 .cards{
@@ -90,6 +87,17 @@
     gap: 20px;
     grid-template-columns: repeat(2, minmax(250px, 1fr));
     grid-auto-rows: 200px;
+}
+
+.cards .card{
+    border-left: 8px solid yellow;
+}
+
+.card-icons{
+    display: flex;
+    margin-top: auto;
+    justify-content: flex-end;
+    gap: 10px;
 }
 
 .aside{
@@ -104,18 +112,43 @@
     grid-area: announcements;
 }
 
+.announcements .card-item{
+    border-bottom: 2px solid lightgray;
+    margin: 5px 0;
+    padding: 5px 0;
+}
+
 .trending{
     grid-area: trending;
 }
 
 .card{
+    display: flex;
+    flex-direction: column;
+    align-content: space-between;
     background-color: white;
     border-radius: 10px;
     padding: 20px;
-    line-height: 1.6;
     overflow-y: auto;
 }
 
 li {
     list-style: none;
+}
+
+p{
+    line-height: 1.6;
+    font-size: 1.2rem;
+}
+
+h3{
+    font-size: 1.7rem;
+}
+
+h4{
+    font-size: large;
+}
+
+br{
+    border: 2px solid lightgray
 }
