--- a/index.css
+++ b/index.css
@@ -1,9 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
+body{
+    font-family: "Roboto", sans-serif;
+}
 
 .wrapper{
     min-height: 100vh;
@@ -17,16 +22,44 @@
 }
 
 .header{
-    display: grid;
+    display: flex;
     grid-area: header;
+    box-shadow: 0px 10px 0px 0px #000000;
+    align-items: flex-end;
+    justify-content: space-around;
+    padding-bottom: 10px;
 }
 
 .search {
     display: flex;
-    justify-self: flex-end;
-    align-items: flex-end;
-    margin-right: 10px;
+    justify-self: flex-start;
+    align-items: center;
+    margin-left: 10px;
     margin-bottom: 10px;
+}
+
+.profile{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 2rem;
+}
+
+.profile img{
+    border-radius: 50%;
+    width: 60px;
+    height: auto;
+}
+
+.profile button{
+    padding: 10px;
+    border-radius: 1em;
+    width: 10rem;
+    background-color: #1768AC;
+    color: white;
+    font-family: "Roboto", sans-serif;
+    font-weight: 600;
+    letter-spacing: 1.5px;
 }
 
 #searchbar{
@@ -71,7 +104,7 @@
 .content{
     display: grid;
     grid-area: content;
-    background-color: lightgrey;
+    background-color: #ECF0F1;
     grid-template-columns: 3fr 1fr;
     grid-template-areas: 
     "main aside"
@@ -120,6 +153,20 @@
 
 .trending{
     grid-area: trending;
+}
+
+.trending .card-item{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin-top: 10px;
+}
+
+.card-item img {
+    border-radius: 50%;
+    border: 1px solid black;
+    width: 60px;
+    height: auto;
 }
 
 .card{
